implement search on user fields